--- a/section1/lecture11-jsxAndBabel/index.html
+++ b/section1/lecture11-jsxAndBabel/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Materialize CSS Styling -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
@@ -34,7 +36,6 @@
                                 </div>
                             </div>	
                         </div>
-
         ReactDOM.render(
             markup,
             document.getElementById('root')
