--- a/section1/lecture9-yourFirstReactProgram/index.html
+++ b/section1/lecture9-yourFirstReactProgram/index.html
@@ -6,8 +6,11 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- CDN Links Used To Import React | React Files Itself & React DOM -->
     <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+
+    <!-- Babel Standalone CDN minified file -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
 
 </head>
